@@ -1,3 +1,3 @@
 explain auto int x
              ^
-14: error: declaration expected
+14: error: declaration expected ("int" is a keyword)
